--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
+    "svelte-windicss-preprocess": "^4.2.5",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
